--- a/Moq.Dapper/Moq.Dapper.csproj
+++ b/Moq.Dapper/Moq.Dapper.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.3</Version>
+    <Version>1.1.0</Version>
     <PackageId>Moq.Dapper</PackageId>
     <Description>Moq extensions for Dapper methods.</Description>
     <Copyright>Copyright 2017</Copyright>
@@ -11,12 +11,12 @@
     <Authors>Stefano d'Antonio</Authors>
     <Product>Moq.Dapper</Product>
     <PackageLicenseExpression>GPL-2.0-only</PackageLicenseExpression>
-    <PackageProjectUrl>https://github.com/UnoSD/Moq.Dapper</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/Lonli-Lokli/Moq.Dapper</PackageProjectUrl>
     <RepositoryUrl></RepositoryUrl>
     <PackageTags>Moq Dapper Test</PackageTags>
     <PackageReleaseNotes>Updates Dapper Dependency.</PackageReleaseNotes>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>1.0.3</AssemblyVersion>
+    <AssemblyVersion>1.1.0</AssemblyVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
