--- a/Moq.Dapper/Moq.Dapper.csproj
+++ b/Moq.Dapper/Moq.Dapper.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.1.0</Version>
+    <Version>1.2.0</Version>
     <PackageId>Dapper.Moq</PackageId>
     <Description>Moq extensions for Dapper methods.</Description>
     <Copyright>Copyright 2017</Copyright>
@@ -11,10 +11,11 @@
     <Authors>Stefano d'Antonio</Authors>
     <Product>Dapper.Moq</Product>
     <PackageLicenseExpression>GPL-2.0-only</PackageLicenseExpression>
-    <PackageProjectUrl>https://github.com/Lonli-Lokli/Moq.Dapper</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/Rixxo/Moq.Dapper</PackageProjectUrl>
     <RepositoryUrl></RepositoryUrl>
     <PackageTags>Moq Dapper Test</PackageTags>
-    <PackageReleaseNotes>Updates Dapper Dependency.</PackageReleaseNotes>
+    <PackageReleaseNotes>Updates Dapper Dependency.
+Created callback support for capturing SQL queries.</PackageReleaseNotes>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <AssemblyVersion>1.1.0</AssemblyVersion>
   </PropertyGroup>
