--- a/Moq.Dapper/Moq.Dapper.csproj
+++ b/Moq.Dapper/Moq.Dapper.csproj
@@ -2,20 +2,21 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.2.0</Version>
+    <Version>1.2.1</Version>
     <PackageId>Dapper.Moq</PackageId>
     <Description>Moq extensions for Dapper methods.</Description>
     <Copyright>Copyright 2017</Copyright>
     <FileVersion>1.0.0.0</FileVersion>
     <Company>Stefano d'Antonio</Company>
-    <Authors>Stefano d'Antonio</Authors>
+    <Authors>Stefano d'Antonio, Marco Rizzo</Authors>
     <Product>Dapper.Moq</Product>
     <PackageLicenseExpression>GPL-2.0-only</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/Rixxo/Moq.Dapper</PackageProjectUrl>
     <RepositoryUrl></RepositoryUrl>
     <PackageTags>Moq Dapper Test</PackageTags>
     <PackageReleaseNotes>Updates Dapper Dependency.
-Created callback support for capturing SQL queries.</PackageReleaseNotes>
+Created callback support for capturing SQL queries.
+ExecuteAsync support for IDbConnection</PackageReleaseNotes>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <AssemblyVersion>1.1.0</AssemblyVersion>
   </PropertyGroup>
